--- a/birthday.html
+++ b/birthday.html
@@ -35,6 +35,9 @@
 
     <div class="scroll-section">
         <p id="personalMessage" class="hidden">Dear <span id="userName2"></span>, on your special day, I wish you joy, laughter, and all the happiness in the world. May your year ahead be filled with adventures and dreams come true!</p>
+        <p id="personalMessage" class="hidden">Hi <span id="userName2"></span>,First of all sorry for late gift actually it's not a big gift but i hope you accept this !!!!!!!!!!!!!!</p>
+        <p id="personalMessage" class="hidden">Dhanya <span id="userName2"></span>, It's been like 6 months since i knew you,i don't know much to say but it's been really a good six months<b></b>
+             And i hopes it goes long as possible ,lot of fights but still lof of fun and im sure we will meet one day.Looking forward for that </p>
         <div class="gifts">
             <div class="gift animate__animated animate__fadeInUp hidden" data-delay="0">🎁</div>
             <div class="gift animate__animated animate__fadeInUp hidden" data-delay="200">🎂</div>
